[Bug Fix] Website unscrollable on Mobile
Fixed a bug where the website was unscrollable. The bug was caused by hiding the overflow of the website as it had a small white bar on the right. The bug was fixed by making the Y-Overflow visible as soon as a certain width was reached.

--- a/stylemain.css
+++ b/stylemain.css
@@ -58,6 +58,11 @@ nav select {
 		display: none;
 	}
 }
+@media (max-width: 1300px) {
+	body {
+	 overflow-y: visible;
+	}
+}
 .container1 {
 	display: flex;
 	flex-wrap: wrap;
